--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   path: ^1.6.4 
   http: ^0.12.0+2
   random_color: ^1.0.3
+  ansicolor: ^1.0.2
+  #provider: ^3.1.0
+  shared_preferences: ^0.5.3+4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
