--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: AgroHelp.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.2.1+1
+version: 1.2.1+4
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -30,8 +30,9 @@ dependencies:
   #provider: ^3.1.0
   shared_preferences: ^0.5.3+4
   #flutter_html: ^0.11.0
-  flutter_widget_from_html: ^0.2.3+4
-  intl: ^0.15.8
+  #flutter_widget_from_html: ^0.3.0-rc
+  flutter_widget_from_html: ^0.2.4+2
+  #intl: ^0.16.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
